# mosaic_python

./: .gitattributes  .gitignore  CITATION.cff  CODEMAP.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_mosaic.bat  run_mosaic.command  run_mosaic.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: pages.yml
cache/: North_Carolina_Simplified.pkl  North_Carolina_Simplified.pp.pkl
shapefiles/: Alabama.dbf  Alabama.qmd  GA_simple.dbf  GA_simple.shp  GA_simple.shx  North_Carolina_Simplified.dbf  North_Carolina_Simplified.qmd  North_Carolina_Simplified.shp  North_Carolina_Simplified.shx  florida_v3.dbf  florida_v3.shx  ready_Wisconsin.qmd  wi_generalized_test.shx
src/mosaic/: __init__.py  __main__.py  crash.py  paths.py  renumber.py
src/mosaic/graph/: __init__.py  adjacency.py  cache.py
src/mosaic/gui/: __init__.py  app.py  map_view.py  presets.py  runner.py  shp_dialog.py  state.py  theme.py
src/mosaic/gui/app/: __init__.py  __main__.py  _common.py  core.py  export_mixin.py  io_mixin.py  map_mixin.py  menu_mixin.py  panels_mixin.py  phase_mixin.py  popups_mixin.py  runner_mixin.py  setup_mixin.py  toggles_mixin.py  updates_mixin.py
src/mosaic/io/: __init__.py  export.py  hot_start.py  inspect.py  shapefile.py  validate.py
src/mosaic/recom/: __init__.py  annealing.py  flip.py  partition.py  recombination.py  tree.py
src/mosaic/scoring/: __init__.py  alignment.py  cache.py  county_splits.py  holistic_compactness.py  holistic_competitiveness.py  holistic_proportionality.py  holistic_splitting.py  partisan.py  polsby_popper.py  population.py  precompute.py  reock.py  score.py
website/: help.html  index.html  install.html  shapefiles.html
