[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
version = "0.1.0"
description = "Redistricting toolkit using recombination (ReCom) algorithms"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matt Mohn"}
]
keywords = ["redistricting", "recom", "gerrymandering", "gis", "political"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "shapely>=2.0",
    "dearpygui>=1.10",
    "igraph>=1.0",
    "Pillow>=10.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
mosaic = "mosaic:main"

[project.urls]
Homepage = "https://github.com/matt-mohn/mosaic_python"
Repository = "https://github.com/matt-mohn/mosaic_python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
